--- a/index.html
+++ b/index.html
@@ -5,8 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Slawomir Dyk Junior Software Developer</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <header>
+        <div class="welcome">
+            <p>Hello</p>
+            <h1>My Name is Slawomir</h1>
+            <h2>I am a junior software developer</h2>
+        </div>
+    </header>
     
 </body>
 </html>
