--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Slawomir Dyk Junior Software Developer</title>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Saira+Condensed:400,700|Saira:300,400&amp;subset=latin-ext" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -14,6 +15,7 @@
             <h1>My Name is Slawomir</h1>
             <h2>I am a junior software developer</h2>
         </div>
+        <img src="images/photo1.png" alt="model's image">
     </header>
     
 </body>
