Add css media for small resolution with arientation lanscape

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         </div>
         <img src="images/photo1.png" alt="model's image">
     </header>
+    <section>
+        
+    </section>
     
 </body>
 </html>
