Add @media for desktop screens

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 <body>
     <header>
         <div class="welcome">
-            <p>Hello</p>
+            <p>Hello!</p>
             <h1>My Name is Slawomir</h1>
             <h2>I am a junior software developer</h2>
         </div>
         <img src="images/photo1.png" alt="model's image">
     </header>
     <section>
-        
+
     </section>
     
 </body>
