Add section tag with class features, Add basic css for this section

--- a/index.html
+++ b/index.html
@@ -17,8 +17,24 @@
         </div>
         <img src="images/photo1.png" alt="model's image">
     </header>
-    <section>
 
+    <section class="features">
+        <h1>Technologies with which I work</h1>
+        <div class="feature">
+            <h2>Front End</h2>
+            <div class="img_test"></div>
+            <p class="description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet.</p>
+        </div>
+        <div class="feature">
+            <h2>Back End</h2>
+            <div class="img_test"></div>
+            <p class="description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet.</p>
+        </div>
+        <div class="feature">
+            <h2>Others</h2>
+            <div class="img_test"></div>
+            <p class="description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet.</p>
+        </div>
     </section>
     
 </body>
