Add clearfix class to section tag

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <img src="images/photo1.png" alt="model's image">
     </header>
 
-    <section class="features">
+    <section class="features clearfix">
         <h1>Technologies with which I work</h1>
         <div class="feature">
             <h2>Front End</h2>
