Replace test_img for final images in features secion

--- a/index.html
+++ b/index.html
@@ -22,20 +22,31 @@
         <h1>Technologies with which I work</h1>
         <div class="feature">
             <h2>Front End</h2>
-            <div class="img_test"></div>
+            <img src="images/FotoJet (1).png" width="300px" height="300px">
+            <!-- <div class="img_test"></div> -->
             <p class="description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet.</p>
         </div>
         <div class="feature">
             <h2>Back End</h2>
-            <div class="img_test"></div>
+            <img src="images/FotoJet (3).png" width="300px" height="300px">
+            <!-- <div class="img_test"></div> -->
             <p class="description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet.</p>
         </div>
         <div class="feature">
             <h2>Others</h2>
-            <div class="img_test"></div>
+            <img src="images/FotoJet (2).png" width="300px" height="300px">
+            <!-- <div class="img_test"></div> -->
             <p class="description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet.</p>
         </div>
     </section>
+    
+    <section class="slogan">
+            <div class="bg">
+        <h1>My motto</h1>
+        <h2>A winner is a loser who tried one more time</h2>
+    </div> 
+    </section>
+</div>  
     
 </body>
 </html>
