Add section slogan to HTML and basic styling this section to see how it looks like

--- a/index.html
+++ b/index.html
@@ -41,12 +41,15 @@
     </section>
     
     <section class="slogan">
-            <div class="bg">
+        <div class="bg">
+         <!-- <img src="images/photo2.jpg"> -->
         <h1>My motto</h1>
-        <h2>A winner is a loser who tried one more time</h2>
-    </div> 
+        <p class="text">A winner is a loser who tried one more time</p>
+    </div>
     </section>
-</div>  
-    
+ 
+    <section class="lol">
+
+    </section>
 </body>
 </html>
