Add css elements for all resolutions (slogan section)  this section is finally done

--- a/index.html
+++ b/index.html
@@ -42,9 +42,8 @@
     
     <section class="slogan">
         <div class="bg">
-         <!-- <img src="images/photo2.jpg"> -->
         <h1>My motto</h1>
-        <p class="text">A winner is a loser who tried one more time</p>
+        <p>A winner is a loser who tried one more time</p>
     </div>
     </section>
  
