Modified html code in feature section

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Saira+Condensed:400,700|Saira:300,400&amp;subset=latin-ext" rel="stylesheet">
 </head>
 <body>
+    <!-- section header -->
     <header>
         <div class="welcome">
             <p>Hello!</p>
@@ -18,28 +19,27 @@
         <img src="images/photo1.png" alt="model's image">
     </header>
 
+    <!-- section feature -->
     <section class="features clearfix">
         <h1>Technologies with which I work</h1>
         <div class="feature">
             <h2>Front End</h2>
-            <img src="images/FotoJet (1).png" width="300px" height="300px">
-            <!-- <div class="img_test"></div> -->
+            <img src="images/FotoJet (1).png" alt="logo: React, JS, HTML, CSS, Responsive Web Design">
             <p class="description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet.</p>
         </div>
         <div class="feature">
             <h2>Back End</h2>
-            <img src="images/FotoJet (3).png" width="300px" height="300px">
-            <!-- <div class="img_test"></div> -->
+            <img src="images/FotoJet (3).png" alt="logo: Java, Spring mongoDB, PSQL, Restfull">
             <p class="description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet.</p>
         </div>
         <div class="feature">
             <h2>Others</h2>
-            <img src="images/FotoJet (2).png" width="300px" height="300px">
-            <!-- <div class="img_test"></div> -->
+            <img src="images/FotoJet (2).png" alt="logo Mac, Windows GitHub Agile, Terminal">
             <p class="description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet.</p>
         </div>
     </section>
-    
+
+    <!-- section slogan -->
     <section class="slogan">
         <div class="bg">
         <h1>My motto</h1>
@@ -47,7 +47,7 @@
     </div>
     </section>
  
-    <section class="lol">
+    <!-- <section class="lol"> -->
 
     </section>
 </body>
