Add hobby section in index.html file, Added the same section to CSS file, basic layout for the smallest resolution with portrait orientation is ready

--- a/index.html
+++ b/index.html
@@ -44,11 +44,15 @@
         <div class="bg">
         <h1>My motto</h1>
         <p>A winner is a loser who tried one more time</p>
-    </div>
+    </div> 
     </section>
- 
-    <!-- <section class="lol"> -->
-
+    <!-- section hobby -->
+    <section class="hobby">
+    <h1>In my free time</h1>
+    <div class="item"><p>I love hiking</p></div>
+    <div class="item"><p>My favourite sport is cycling</p></div>
+    <div class="item"><p>New techologies</p></div>
+    <div class="item"><p>Food!</p></div>
     </section>
 </body>
 </html>
