Add media query with min-width 533px, Add clearfix class to HTML hobby section

--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@
         <p>A winner is a loser who tried one more time</p>
     </div> 
     </section>
+
     <!-- section hobby -->
-    <section class="hobby">
+    <section class="hobby clearfix">
     <h1>In my free time</h1>
     <div class="item"><p>I love hiking</p></div>
     <div class="item"><p>My favourite sport is cycling</p></div>
