Add contact section to the HTML document, basic layout created for this section

--- a/index.html
+++ b/index.html
@@ -55,5 +55,13 @@
     <div class="item"><p>New techologies</p></div>
     <div class="item"><p>Food!</p></div>
     </section>
+
+    <!-- section contact -->
+    <section class="contact">
+    <h1>My contact details</h1>
+    <div class="detail"> <img src="images/contact1.png"><p>mail@domein.com</p></div>
+    <div class="detail"> <img src="images/contact2.png"><p>+44 0988999999</p></div>
+    <div class="detail"> <img src="images/contact5.png"><p>mail@domein.com</p></div>
+    </section> 
 </body>
 </html>
