Add media query for min-width: 1024px

--- a/index.html
+++ b/index.html
@@ -63,5 +63,6 @@
     <div class="detail"> <img src="images/contact2.png"><p>+44 0988999999</p></div>
     <div class="detail"> <img src="images/contact5.png"><p>mail@domein.com</p></div>
     </section> 
+    <footer>Slawomir Dyk</footer>
 </body>
 </html>
