Add basic HTML elements to the section projects

--- a/index.html
+++ b/index.html
@@ -19,6 +19,17 @@
         <img src="images/photo1.png" alt="model's image">
     </header>
 
+    <!-- section projects -->
+    <section class="portfolio">
+        <h1>My Projects</h1>
+        <div class="app">
+        <img src="images/Java project1.png" alt="portfolio1">
+        <div class="about"></div>
+        <h2>Project Name</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum soluta voluptatibus error dicta at magni voluptatem, incidunt consequatur sapiente molestias delectus. Rerum voluptatibus libero ipsum consectetur aspernatur accusamus inventore dolores?</p>
+        </div>
+    </section>
+
     <!-- section feature -->
     <section class="features clearfix">
         <h1>Technologies with which I work</h1>
