Add section portfoli to the HTML file, removed unwanted images

--- a/index.html
+++ b/index.html
@@ -18,18 +18,7 @@
         </div>
         <img src="images/photo1.png" alt="model's image">
     </header>
-
-    <!-- section projects -->
-    <section class="portfolio">
-        <h1>My Projects</h1>
-        <div class="app">
-        <img src="images/Java project1.png" alt="portfolio1">
-        <div class="about"></div>
-        <h2>Project Name</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum soluta voluptatibus error dicta at magni voluptatem, incidunt consequatur sapiente molestias delectus. Rerum voluptatibus libero ipsum consectetur aspernatur accusamus inventore dolores?</p>
-        </div>
-    </section>
-
+        
     <!-- section feature -->
     <section class="features clearfix">
         <h1>Technologies with which I work</h1>
@@ -49,6 +38,47 @@
             <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet.</p>
         </div>
     </section>
+
+    <!-- section portfolio -->
+    <section class="portfolio">
+            <h1>My Project I am proud of</h1>
+            <div class="project">
+              <div class="web">
+                <img src="images/Java project1.png" alt="portfolio number 1">
+              </div>
+              <div class="about">
+                <h2>Project Name1</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed doloremque quidem illo doloribus ipsa, facere, quae eligendi debitis. A debitis totam amet aperiam enim. Qui velit corrupti consequatur nihil est.</p>
+              </div>
+            </div>
+            <div class="project">
+              <div class="web">
+                <img src="images/Java project1.png" alt="portfolio number 2">
+              </div>
+              <div class="about">
+                <h2>Project Name2</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed doloremque quidem illo doloribus ipsa, facere, quae eligendi debitis. A debitis totam amet aperiam enim. Qui velit corrupti consequatur nihil est.</p>
+              </div>
+            </div>
+            <div class="project">
+              <div class="web">
+                <img src="images/Java project1.png" alt="portfolio number 3">
+              </div>
+              <div class="about">
+                <h2>Project Name3</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed doloremque quidem illo doloribus ipsa, facere, quae eligendi debitis. A debitis totam amet aperiam enim. Qui velit corrupti consequatur nihil est.</p>
+              </div>
+            </div>
+            <div class="project">
+              <div class="web">
+                <img src="images/Java project1.png" alt="portfolio number 4">
+              </div>
+              <div class="about">
+                <h2>Project Name4</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed doloremque quidem illo doloribus ipsa, facere, quae eligendi debitis. A debitis totam amet aperiam enim. Qui velit corrupti consequatur nihil est.</p>
+              </div>
+            </div>
+          </section>
 
     <!-- section slogan -->
     <section class="slogan">
@@ -75,5 +105,6 @@
     <div class="detail"> <img src="images/contact5.png"><p>mail@domein.com</p></div>
     </section> 
     <footer>Slawomir Dyk</footer>
+    
 </body>
 </html>
