Add media query for landscape orientation

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <!-- section portfolio -->
     <section class="portfolio">
             <h1>My Project I am proud of</h1>
-            <div class="project">
+            <div class="project clearfix">
               <div class="web">
                 <img src="images/Java project1.png" alt="portfolio number 1">
               </div>
@@ -51,16 +51,16 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed doloremque quidem illo doloribus ipsa, facere, quae eligendi debitis. A debitis totam amet aperiam enim. Qui velit corrupti consequatur nihil est.</p>
               </div>
             </div>
-            <div class="project">
+            <div class="project clearfix">
               <div class="web">
-                <img src="images/Java project1.png" alt="portfolio number 2">
+                <img src="images/portfolio1.jpg" alt="portfolio number 2">
               </div>
               <div class="about">
                 <h2>Project Name2</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed doloremque quidem illo doloribus ipsa, facere, quae eligendi debitis. A debitis totam amet aperiam enim. Qui velit corrupti consequatur nihil est.</p>
               </div>
             </div>
-            <div class="project">
+            <div class="project clearfix">
               <div class="web">
                 <img src="images/Java project1.png" alt="portfolio number 3">
               </div>
@@ -69,7 +69,7 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed doloremque quidem illo doloribus ipsa, facere, quae eligendi debitis. A debitis totam amet aperiam enim. Qui velit corrupti consequatur nihil est.</p>
               </div>
             </div>
-            <div class="project">
+            <div class="project clearfix">
               <div class="web">
                 <img src="images/Java project1.png" alt="portfolio number 4">
               </div>
