Add section education to the HTML document with images

--- a/index.html
+++ b/index.html
@@ -80,6 +80,25 @@
             </div>
           </section>
 
+    <!-- section education -->
+    <section>
+        <h1>Technical Education</h1>
+        <div>
+            <img src="images/education1.png" alt="">
+            <h2>CodeClan</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis aperiam cum eligendi temporibus, dignissimos commodi rem tenetur error vitae recusandae dolor nostrum! Fugiat eaque distinctio harum possimus debitis iusto dolorem.</p>
+        </div> 
+        <div>
+            <img src="images/education2.jpg" alt="">
+            <h2>Home Learing College</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis aperiam cum eligendi temporibus, dignissimos commodi rem tenetur error vitae recusandae dolor nostrum! Fugiat eaque distinctio harum possimus debitis iusto dolorem.</p>
+        </div> 
+        <div>
+            <img src="images/education3.png" alt="">
+            <h2>Udemy</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis aperiam cum eligendi temporibus, dignissimos commodi rem tenetur error vitae recusandae dolor nostrum! Fugiat eaque distinctio harum possimus debitis iusto dolorem.</p>
+        </div>     
+    </section>
     <!-- section slogan -->
     <section class="slogan">
         <div class="bg">
