Add basic styling to the education section, some images for this section

--- a/index.html
+++ b/index.html
@@ -81,19 +81,19 @@
           </section>
 
     <!-- section education -->
-    <section>
+    <section class="ed">
         <h1>Technical Education</h1>
-        <div>
+        <div class="education clearfix">
             <img src="images/education1.png" alt="">
             <h2>CodeClan</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis aperiam cum eligendi temporibus, dignissimos commodi rem tenetur error vitae recusandae dolor nostrum! Fugiat eaque distinctio harum possimus debitis iusto dolorem.</p>
         </div> 
-        <div>
+        <div class="education clearfix">
             <img src="images/education2.jpg" alt="">
             <h2>Home Learing College</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis aperiam cum eligendi temporibus, dignissimos commodi rem tenetur error vitae recusandae dolor nostrum! Fugiat eaque distinctio harum possimus debitis iusto dolorem.</p>
         </div> 
-        <div>
+        <div class="education clearfix">
             <img src="images/education3.png" alt="">
             <h2>Udemy</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis aperiam cum eligendi temporibus, dignissimos commodi rem tenetur error vitae recusandae dolor nostrum! Fugiat eaque distinctio harum possimus debitis iusto dolorem.</p>
