Add images to the portfolio section with the names and projects description

--- a/index.html
+++ b/index.html
@@ -47,34 +47,34 @@
                 <img src="images/Java project1.png" alt="portfolio number 1">
               </div>
               <div class="about">
-                <h2>Project Name1</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed doloremque quidem illo doloribus ipsa, facere, quae eligendi debitis. A debitis totam amet aperiam enim. Qui velit corrupti consequatur nihil est.</p>
+                <h2>Restaurant Booking App</h2>
+                <p>The restaurant needs a way to book and arrange tables for customers who are booking over the phone. This system is for the staff to use. The application allows the manager to book a table at the restaurant for a particular customer at a particular time, date and also enables update a booking. Technologies used: Java, Spring, React, PSQL.</p>
               </div>
             </div>
             <div class="project clearfix">
               <div class="web">
-                <img src="images/portfolio1.jpg" alt="portfolio number 2">
+                <img src="images/portfolio2.png" alt="portfolio number 2">
               </div>
               <div class="about">
-                <h2>Project Name2</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed doloremque quidem illo doloribus ipsa, facere, quae eligendi debitis. A debitis totam amet aperiam enim. Qui velit corrupti consequatur nihil est.</p>
+                <h2>"Slainte" - Beer Tracking App </h2>
+                <p>A user can add their favourite beer to the database application, edit and delete a beer from the database. The country of the beer production, which has been chosen by a user, will be marked on the Earth map with red colour. Technologies used: JavaScript, Node.js, Webpack, HTML, CSS, MongoDB.</p>
               </div>
             </div>
             <div class="project clearfix">
               <div class="web">
-                <img src="images/Java project1.png" alt="portfolio number 3">
+                <img src="images/portfolio3.png" alt="portfolio number 3">
               </div>
               <div class="about">
-                <h2>Project Name3</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed doloremque quidem illo doloribus ipsa, facere, quae eligendi debitis. A debitis totam amet aperiam enim. Qui velit corrupti consequatur nihil est.</p>
+                <h2>Animal Shelter App</h2>
+                <p>The Scottish Animal Shelter is a management system to keep track of their animals and owners. The shelter has a list of potential new owners for animals and owners who have already adopted animals. A user can add a new owner to the list, can add a new animal to be adopted or to be added to the quarantine list. Technologies used: Ruby, Sinatra, HTML, CSS, PSQL.</p>
               </div>
             </div>
             <div class="project clearfix">
               <div class="web">
-                <img src="images/Java project1.png" alt="portfolio number 4">
+                <img src="images/portfolio4.png" alt="portfolio number 4">
               </div>
               <div class="about">
-                <h2>Project Name4</h2>
+                <h2>"Gwent" - Memory Test Game</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed doloremque quidem illo doloribus ipsa, facere, quae eligendi debitis. A debitis totam amet aperiam enim. Qui velit corrupti consequatur nihil est.</p>
               </div>
             </div>
