Footer section has been changed

--- a/index.html
+++ b/index.html
@@ -119,11 +119,11 @@
     <!-- section contact -->
     <section class="contact">
     <h1>My contact details</h1>
-    <div class="detail"> <img src="images/contact1.png"><p>mail@domein.com</p></div>
+    <div class="detail"> <img src="images/contact1.png"><p>slawomirdyk@gmail.com</p></div>
     <div class="detail"> <img src="images/contact2.png"><p>+44 0988999999</p></div>
-    <div class="detail"> <img src="images/contact5.png"><p>mail@domein.com</p></div>
+    <div class="detail"> <img src="images/contact5.png"><p>www.linkedin.com/in/slawomir-dyk-b35ab1177/</p></div>
     </section> 
-    <footer>Slawomir Dyk</footer>
+    <footer>Designed and Developed by Slawomir Dyk</footer>
     
 </body>
 </html>
