I have worked on styling seducation secion, add media query for landscape orientation and min-width: 1024px

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           </section>
 
     <!-- section education -->
-    <section class="ed">
+    <section class="ed clearfix">
         <h1>Technical Education</h1>
         <div class="education clearfix">
             <img src="images/education1.png" alt="">
@@ -93,7 +93,7 @@
         <div class="education clearfix">
             <img src="images/education2.jpg" alt="">
             <h2>Home Learing College</h2>
-            <h3>Qualification: Certified Internet Webmaster Foundation.</h3>
+            <h3>Qualification: Certified Internet Webmaster Foundation.</h3></br>
             <h4>November 2018 - April 2019</h4>
             <p>This course containts three modules: Site Development, Internet Business, Network Technology.</p>
             <p>Site Development: Web site development using Hypertext Markup Language (HTML) 
@@ -128,12 +128,9 @@
         <div class="education clearfix">
             <img src="images/education3.png" alt="">
             <h2>Udemy</h2>
-            <h3> Certificate of Completion:
-               
-
-            </h3>
-            <p>Java for absolute beginners</p>
-            <h4>November 2018 - April 2019</h4>
+            <h3> Certificate of Completion: Java for absolute beginners</h3></br>
+   
+            <h4>July 2018 - till now</h4>
             <p>Udemy.com is the world's largest online learning platform. It is aimed at professional adults and students. Udemy has more than 30 million students and 50,000 instructors teaching courses in over 60 languages. The website provides a variety of educational courses which are cheap compared to other websites and it also helps the student to communicate directly with the instructor by providing a chat box, which is also useful for other students if they have common doubts.I like that it helps students learn quickly and easily, Udemy's platform is very dynamic, and it is almost intuitive when it comes to using it. I use this platform to learn new technologies and practise my current skills.</p>
         </div>     
     </section>
