Modified styling of slogan and hobby secion, some images removed

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     <h1>In my free time</h1>
     <div class="item"><p>I love hiking</p></div>
     <div class="item"><p>My favourite sport is cycling</p></div>
-    <div class="item"><p>I learn new techologies</p></div>
+    <div class="item"><p>I learn new technologies</p></div>
     <div class="item"><p>Food!</p></div>
     </section>
 
