Description of Education section been changed

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <section class="features clearfix">
         <h1>Technical Skills</h1>
         <div class="feature">
-            <h2>Front End</h2>
+            <h2>Front-End</h2>
             <img src="images/FotoJet (1).png" alt="logo: React, JS, HTML, CSS, Responsive Web Design">
             <ul>
                 <li>Very good knowledge and experience with HTML, CSS, JavaScript </li>
@@ -34,7 +34,7 @@
             
         </div>
         <div class="feature">
-            <h2>Back End</h2>
+            <h2>Back-End</h2>
             <img src="images/FotoJet (3).png" alt="logo: Java, Spring mongoDB, PSQL, Restfull">
             <ul>
                 <li>Solid fundamentals: TDD, OO programing, databases (PSQL & Mongo) </li>
@@ -114,22 +114,20 @@
             <h3>Qualification: Certified Internet Webmaster Foundation.</h3></br>
             <h4>November 2018 - April 2019</h4>
             <p>This course containts three modules: Site Development, Internet Business, Network Technology.</p>
-            <p>Site Development: Web site development using Hypertext Markup Language (HTML) 
-                Web page development using images, hyperlinks, tables, forms and frames
-                Internet marketing and search engine optimization (SEO), Cascading Style Sheets (CSS) for formatting Web page content, and fundamental Web design concepts,
-                Introductory e-commerce solutions, and the relationship of Web site development to business goals.
+            <p>Site Development: Web site development using Hypertext Markup Language (HTML). 
+                Web page development using: images, hyperlinks, tables, forms.
+                Internet marketing and search engine optimization (SEO), Cascading Style Sheets (CSS) and fundamental Web design concepts.
             </p>
-            <p>Internet Bussiness: Internet connection methods, Internet protocols, the Domain Name System (DNS)
-                The basic functions of Web browsers, the components of Web addresses,
-                Browser plug-ins and add-ons, ways to conduct basic and advanced Web searches
-                Configuration and use of e-mail clients, Internet research and collaboration tools, 
-                Issues and risks associated with the Internet, 
+            <p>Internet Bussiness: Internet connection methods, Internet protocols. The Domain Name System (DNS),
+                The basic functions of Web browsers, the components of Web addresses.
+                Browser plug-ins and add-ons, ways to conduct basic and advanced Web searches.
+                Configuration and use of e-mail clients,  
                 Fundamental elements of project and program management.
             </p>
-            <p>Network Technology: Essential networking technologies and skills, including TCP/IP, stable network creation, wireless networking and network troubleshooting
-                Various network components and protocols that enable users to share data quickly and easily
-                Various types of transmission media, and the ways that network architecture and topologies provide for efficient and secure communication
-                Functions and features of internetworking server types, Basic hardware and operating system maintenance procedures
+            <p>Network Technology: Essential networking technologies and skills, including TCP/IP, stable network creation, wireless networking and network troubleshooting.
+                Various network components and protocols that enable users to share data quickly and easily.
+                Various types of transmission media, 
+                Functions and features of internetworking server types. Basic hardware and operating system maintenance procedures.
                 Routing, IP addressing, IP address classes and subnet masks.
             </p>
         </div> 
@@ -139,7 +137,13 @@
             <h3> Certificate of Completion: Java for absolute beginners</h3></br>
    
             <h4>July 2018 - till now</h4>
-            <p>Udemy.com is the world's largest online learning platform. It is aimed at professional adults and students. Udemy has more than 30 million students and 50,000 instructors teaching courses in over 60 languages. The website provides a variety of educational courses which are cheap compared to other websites and it also helps the student to communicate directly with the instructor by providing a chat box, which is also useful for other students if they have common doubts.I like that it helps students learn quickly and easily, Udemy's platform is very dynamic, and it is almost intuitive when it comes to using it. I use this platform to learn new technologies and practise my current skills.</p>
+            <p>Udemy.com is the world's largest online learning platform. 
+                It is aimed at professional adults and students. 
+                Udemy has more than 30 million students and 50,000 instructors teaching courses in over 60 languages.
+                 The website provides a variety of educational courses.
+                   
+                I use this platform to learn new technologies and practise my current skills.
+            </p>
         </div>     
     </section>
     <!-- section slogan -->
