Add github link for each project in portfolio section

--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
               <div class="about">
                 <h2>Restaurant Booking App</h2>
                 <p>The restaurant needs a way to book and arrange tables for customers who are booking over the phone. This system is for the staff to use. The application allows the manager to book a table at the restaurant for a particular customer at a particular time, date and also enables update a booking. Technologies used: Java, Spring, React, PSQL.</p>
-              </div>
+                <a href="https://github.com/Slav666/booking-app">GitHub</a>
+                </div>
             </div>
             <div class="project clearfix">
               <div class="web">
@@ -76,7 +77,8 @@
               <div class="about">
                 <h2>"Slainte" - Beer Tracking App </h2>
                 <p>A user can add their favourite beer to the database application, edit and delete a beer from the database. The country of the beer production, which has been chosen by a user, will be marked on the Earth map with red colour. Technologies used: JavaScript, Node.js, Webpack, HTML, CSS, MongoDB.</p>
-              </div>
+                <a href="https://github.com/Slav666/booking-app">GitHub</a>
+            </div>
             </div>
             <div class="project clearfix">
               <div class="web">
@@ -85,7 +87,8 @@
               <div class="about">
                 <h2>Animal Shelter App</h2>
                 <p>The Scottish Animal Shelter is a management system to keep track of their animals and owners. The shelter has a list of potential new owners for animals and owners who have already adopted animals. A user can add a new owner to the list, can add a new animal to be adopted or to be added to the quarantine list. Technologies used: Ruby, Sinatra, HTML, CSS, PSQL.</p>
-              </div>
+                <a href="https://github.com/Slav666/booking-app">GitHub</a>
+            </div>
             </div>
             <div class="project clearfix">
               <div class="web">
@@ -94,7 +97,8 @@
               <div class="about">
                 <h2>"Gwent" - Memory Test Game</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed doloremque quidem illo doloribus ipsa, fa</p>
-              </div>
+                <a href="https://github.com/Slav666/booking-app">GitHub</a>
+            </div>
             </div>
           </section>
 
